charon/tests/ui/monomorphization/dyn-trait.out
warning: variable does not need to be mutable
   --> /home/runner/work/charon/charon/hax/frontend/exporter/src/types/ty.rs:541:13
    |
541 |         let mut assoc_type_assignments = Vec::new();
    |             ----^^^^^^^^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: `hax-frontend-exporter` (lib) generated 1 warning (run `cargo fix --lib -p hax-frontend-exporter` to apply 1 suggestion)
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.09s
     Running `target/debug/charon rustc --monomorphize '--start-from=crate::main' -- tests/ui/monomorphization/dyn-trait.rs`
warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

note: the error occurred when translating `core::fmt::Display::<type_error("Unexpected error: could not find the type variable _dyn")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:1:1
  |
1 | //@ charon-args=--monomorphize
  | -
...
6 |     x.to_string()
  |     -------------
disabled backtrace
warning[E9999]: Could not find a clause for `Binder { value: <_dyn as std::fmt::Display>, bound_vars: [] }` in the current context: `Unimplemented`
    --> /home/runner/.rustup/toolchains/nightly-2025-07-08-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/fmt/mod.rs:1028:5
     |
1028 |     fn fmt(&self, f: &mut Formatter<'_>) -> Result;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = note: ⚠️ This is a bug in Hax's frontend.
             Please report this error to https://github.com/hacspec/hax/issues with some context (e.g. the current crate)!

warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1028:5

warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

note: the error occurred when translating `core::fmt::Display::<(dyn exists<_dyn> [@TraitClause0]: core::fmt::Display::<type_error("Unexpected error: could not find the type variable _dyn")> + _dyn : '_)>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:6:5
  |
6 |     x.to_string()
  |     -------------
warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

note: the error occurred when translating `core::fmt::Display::<type_error("Unexpected error: could not find the type variable _dyn")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:6:5
  |
6 |     x.to_string()
  |     -------------
disabled backtrace
warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1028:5

warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

note: the error occurred when translating `core::fmt::Display::{vtable}::<type_error("Unexpected error: could not find the type variable _dyn")>`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:1:1
   |
 1 |   //@ charon-args=--monomorphize
   |   -
...
 5 |   fn dyn_to_string(x: &dyn Display) -> String {
   |  _-                -
 6 | |     x.to_string()
   | |     -------------
 7 | | }
   | |_-
...
11 |       let _ = dyn_to_string(&str);
   |                             ----
warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

note: the error occurred when translating `core::fmt::Display::{vtable}::<type_error("Unexpected error: could not find the type variable _dyn")>`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:1:1
   |
 1 |   //@ charon-args=--monomorphize
   |   -
...
 5 |   fn dyn_to_string(x: &dyn Display) -> String {
   |  _-                -
 6 | |     x.to_string()
   | |     -------------
 7 | | }
   | |_-
...
11 |       let _ = dyn_to_string(&str);
   |                             ----
warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1028:5

note: the error occurred when translating `core::fmt::Display::fmt::<type_error("Unexpected error: could not find the type variable _dyn")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:1:1
  |
1 | //@ charon-args=--monomorphize
  | -
...
6 |     x.to_string()
  |     -------------
warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1028:5

warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1028:5

note: the error occurred when translating `core::fmt::Display::fmt::<type_error("Unexpected error: could not find the type variable _dyn")>`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:1:1
   |
 1 |   //@ charon-args=--monomorphize
   |   -
...
 5 |   fn dyn_to_string(x: &dyn Display) -> String {
   |  _-                -
 6 | |     x.to_string()
   | |     -------------
 7 | | }
   | |_-
...
11 |       let _ = dyn_to_string(&str);
   |                             ----
warning: Unexpected error: could not find the type variable _dyn
 --> /rustc/library/core/src/fmt/mod.rs:1028:5

warning: Cannot generate vtable for trait implementation with unresolved type parameters (this is likely due to synthetic dyn trait parameters in monomorphization mode)
 --> /rustc/library/alloc/src/string.rs:2623:1

note: the error occurred when translating `alloc::string::{impl core::fmt::Display::<alloc::string::String>}::{vtable}`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:11:27
   |
11 |     let _ = dyn_to_string(&str);
   |                           ----
warning: Item `alloc::string::{impl#23}` caused errors; ignoring.
 --> /rustc/library/alloc/src/string.rs:2623:1

warning: 1 warning emitted

warning: The extraction generated 18 warnings
